--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>HipStar Viewer</title>
+ <script src="https://cdn.jsdelivr.net/npm/three@0.159.0/build/three.min.js"></script>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,6 +22,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.156.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/astronomy-engine@2.1.19/astronomy.browser.min.js"></script>
-<script src="main.js"></script>
+<script src="main.js" type="module"></script>
 </body>
 </html>
